quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/QuoteForge_Document__c.object-meta.xml
<CustomObject>
    <label>QuoteForge Document</label>
    <pluralLabel>QuoteForge Documents</pluralLabel>
    <nameField>
        <label>Document ID</label>
        <type>Text</type>
    </nameField>
    <description>Stores metadata for AI-generated quotes and proposals created by QuoteForge. Links to the Opportunity and the actual file (ContentVersion).</description>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>