quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/AI_Model__c.field-meta.xml
<CustomField>
    <fullName>AI_Model__c</fullName>
    <label>AI Model</label>
    <type>Text</type>
    <length>100</length>
    <description>The LLM model used for generation (e.g., mistral-7b, llama-3.2)</description>
</CustomField>