quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Compliance_Framework__c.field-meta.xml
<CustomField>
    <fullName>Compliance_Framework__c</fullName>
    <label>Compliance Framework</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>SOC 2</fullName><default>false</default><label>SOC 2</label></value>
            <value><fullName>GDPR</fullName><default>false</default><label>GDPR</label></value>
            <value><fullName>PPRA</fullName><default>false</default><label>PPRA</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Auto-selected compliance frameworks based on deal region</description>
</CustomField>