quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Content_Document_Id__c.field-meta.xml
<CustomField>
    <fullName>Content_Document_Id__c</fullName>
    <label>Content Document ID</label>
    <type>Text</type>
    <length>18</length>
    <description>Links to the ContentDocument (actual PDF/DOCX file in Salesforce Files)</description>
</CustomField>