quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>