quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Document_Type__c.field-meta.xml
<CustomField>
    <fullName>Document_Type__c</fullName>
    <label>Document Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Quote</fullName><default>false</default><label>Quote</label></value>
            <value><fullName>Proposal</fullName><default>true</default><label>Proposal</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>