quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Generation_Time__c.field-meta.xml
<CustomField>
    <fullName>Generation_Time__c</fullName>
    <label>Generation Time (seconds)</label>
    <type>Number</type>
    <precision>8</precision>
    <scale>2</scale>
    <description>Time taken to generate the document in seconds</description>
</CustomField>