quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>QuoteForge_Documents</relationshipName>
    <relationshipLabel>QuoteForge Documents</relationshipLabel>
    <description>The Opportunity this document was generated from</description>
</CustomField>