quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Output_Format__c.field-meta.xml
<CustomField>
    <fullName>Output_Format__c</fullName>
    <label>Output Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>PDF</fullName><default>true</default><label>PDF</label></value>
            <value><fullName>DOCX</fullName><default>false</default><label>DOCX</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>