quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>US</fullName><default>true</default><label>US</label></value>
            <value><fullName>EU</fullName><default>false</default><label>EU</label></value>
            <value><fullName>PK</fullName><default>false</default><label>PK</label></value>
            <value><fullName>Global</fullName><default>false</default><label>Global</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>