quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value><fullName>Draft</fullName><default>false</default><label>Draft</label></value>
            <value><fullName>Generated</fullName><default>true</default><label>Generated</label></value>
            <value><fullName>Sent</fullName><default>false</default><label>Sent</label></value>
            <value><fullName>Viewed</fullName><default>false</default><label>Viewed</label></value>
            <value><fullName>Accepted</fullName><default>false</default><label>Accepted</label></value>
            <value><fullName>Rejected</fullName><default>false</default><label>Rejected</label></value>
            <value><fullName>Expired</fullName><default>false</default><label>Expired</label></value>
        </valueSetDefinition>
    </valueSet>
    <description>Lifecycle: Draft → Generated → Sent → Viewed → Accepted/Rejected/Expired</description>
</CustomField>