quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Tax__c.field-meta.xml
<CustomField>
    <fullName>Tax__c</fullName>
    <label>Tax</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>