quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Template_Name__c</fullName>
    <label>Template Used</label>
    <type>Text</type>
    <length>255</length>
</CustomField>