quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <label>Total Amount</label>
    <type>Currency</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>