quoteforge_v3/salesforce_package/force-app/main/default/objects/QuoteForge_Document__c/fields/Viewed_Date__c.field-meta.xml
<CustomField>
    <fullName>Viewed_Date__c</fullName>
    <label>Viewed Date</label>
    <type>DateTime</type>
</CustomField>